[gd_scene load_steps=2 format=3 uid="uid://b7mpnwebe0w8j"]

[ext_resource type="Script" path="res://src/admin/admin_cards.gd" id="1_fkli6"]

[node name="admin_cards" type="Node2D"]
script = ExtResource("1_fkli6")

[node name="Panel" type="Panel" parent="."]
offset_right = 288.0
offset_bottom = 304.0

[node name="type" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 10
text = "type"

[node name="card_type" type="Label" parent="Panel/type"]
offset_left = 64.0
offset_right = 128.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10
text = "type"

[node name="sign" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 10
text = "sign"

[node name="card_sign" type="Label" parent="Panel/sign"]
offset_left = 64.0
offset_right = 128.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10
text = "sign"

[node name="ascendent" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 48.0
offset_right = 80.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 10
text = "ascendent
"

[node name="card_ascendent" type="Label" parent="Panel/ascendent"]
offset_left = 64.0
offset_right = 128.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10
text = "ascendent
"

[node name="mana" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 73.0
offset_right = 64.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 10
text = "mana
"

[node name="SpinBox" type="SpinBox" parent="Panel/mana"]
layout_mode = 0
offset_left = 48.0
offset_top = -1.0
offset_right = 131.063
offset_bottom = 30.0
scale = Vector2(0.6, 0.6)
max_value = 12.0

[node name="slot_1" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 104.0
offset_right = 48.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 10
text = "slot_1
"

[node name="slot_1_list" type="OptionButton" parent="Panel/slot_1"]
layout_mode = 0
offset_left = 48.0
offset_top = -4.0
offset_right = 160.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10

[node name="slot_2" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 128.0
offset_right = 48.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 10
text = "slot_2
"

[node name="slot_2_list" type="OptionButton" parent="Panel/slot_2"]
layout_mode = 0
offset_left = 48.0
offset_top = -4.0
offset_right = 160.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10

[node name="slot_3" type="Label" parent="Panel"]
offset_left = 16.0
offset_top = 152.0
offset_right = 48.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 10
text = "slot_3
"

[node name="slot_3_list" type="OptionButton" parent="Panel/slot_3"]
layout_mode = 0
offset_left = 48.0
offset_top = -4.0
offset_right = 160.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 208.0
offset_top = 272.0
offset_right = 272.0
offset_bottom = 294.0
theme_override_font_sizes/font_size = 10
text = "submit"
